# amplifier-bundle-foreman

./: .gitignore  README.md  bundle.md  pyproject.toml
.working/: finish-line.md  session-analysis.md  the-fix.md
agents/: coding-worker.md  research-worker.md  testing-worker.md
context/: instructions.md
docs/: APP_SETUP.md  ARCHITECTURE.md  current-implementation.md  design-validation-report.md  design.md  integrated-design-code-analysis.md  integrated-design-feedback.md  integrated-design-implementation-plan.md  integrated-design-v1.md  integrated-design.md  presentation.html  why-custom.md
modules/orchestrator-foreman/amplifier_module_orchestrator_foreman/: __init__.py  orchestrator.py  pyproject.toml
src/amplifier_bundle_foreman/: __init__.py  orchestrator.py
src/amplifier_module_orchestrator_foreman/: orchestrator.py
test-example/: README.md  integration_test.py  quick_demo.py  run_shadow_tests.sh
test-example/sample-project/: pyproject.toml
test-example/sample-project/src/: calculator.py
test-example/sample-project/tests/: test_calculator.py
tests/: __init__.py  test_background_sessions.py  test_background_sessions_e2e.py  test_orchestrator.py  test_spawn_patterns.py
workers/amplifier-bundle-coding-worker/: README.md  bundle.md  pyproject.toml
workers/amplifier-bundle-coding-worker/context/: instructions.md
workers/amplifier-bundle-coding-worker/tests/: test_bundle.py
workers/amplifier-bundle-research-worker/: README.md  bundle.md  pyproject.toml
workers/amplifier-bundle-research-worker/context/: instructions.md
workers/amplifier-bundle-research-worker/tests/: test_bundle.py
workers/amplifier-bundle-testing-worker/: README.md  bundle.md  pyproject.toml
workers/amplifier-bundle-testing-worker/context/: instructions.md
workers/amplifier-bundle-testing-worker/tests/: test_bundle.py
