[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-bundle-testing-worker"
version = "1.0.0"
description = "Specialized testing worker bundle for Amplifier foreman architecture"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Amplifier Team" }
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
