[project]
name = "amplifier-module-orchestrator-foreman"
version = "0.1.0"
description = "Foreman orchestrator for Amplifier"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = ["amplifier-core"]

[tool.uv.sources]
amplifier-core = { git = "https://github.com/microsoft/amplifier-core", branch = "main" }

[project.entry-points."amplifier.modules"]
hooks-observations = "amplifier_module_orchestrator-foreman:mount"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["amplifier_module_orchestrator-foreman"]
